# CIFFile

./: .gitignore  LICENSE  QUICKSTART.ipynb  README.md  pytest.ini
pkg/: pyproject.toml
pkg/src/ciffile/: __init__.py  _util.py  creator.py  exception.py  reader.py  typing.py
pkg/src/ciffile/parser/: __init__.py  _parser.py
pkg/src/ciffile/structure/: __init__.py  _base.py  _block.py  _block_like.py  _category.py  _file.py  _frame.py  _item.py  _util.py
pkg/src/ciffile/structure/_skel/: __init__.py  _base.py  _block.py  _file.py
pkg/src/ciffile/validation/: __init__.py
pkg/src/ciffile/validation/ddl2/: _caster.py  _gen.py  _stringifier.py  _validator.py
pkg/src/ciffile/validator/: __init__.py  _ddl2.py  _ddl2_gen.py  _ddl2_model.py  _ddl2_types.py  _keywords.py  _main.py  _validator.py
pkg/src/ciffile/writer/: __init__.py  _category.py
pkg/src/scifile/: __init__.py  typing.py
pkg/src/scifile/cif/: __init__.py  exception.py  reader.py  typing.py
pkg/src/scifile/cif/parser/: __init__.py  _exception.py  _output.py  _parser.py  _parser_todict.py  _token.py
pkg/src/scifile/cif/structure/: __init__.py  _base.py  _block.py  _block_like.py  _category.py  _file.py  _frame.py  _util.py
pkg/src/scifile/cif/structure/_skel/: _base.py  _block.py
pkg/src/scifile/cif/validator/: __init__.py  _validator.py
pkg/src/scifile/cif/writer/: category.py
test/: README.md  __init__.py  conftest.py  pytest.ini  quick_test.sh  requirements-test.txt  run_tests.py  test_cif_spec_compliance.py  test_creator.py  test_integration.py  test_parser.py  test_reader.py  (+4 more)
