
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.1.0"
name = "CIFFile"
requires-python = ">=3.12"
dependencies = [
    "polars >=1",
    "pydantic >=2,<3",
    "FileEx >=0.2.9,<0.3",
    "tqdm >=4,<5",
]
